tests/zen/errors/arity_mismatch.zen
fn foo(a, b) { a + b }
foo(1)
